[gd_scene load_steps=6 format=3 uid="uid://dsm5pj1lsvevs"]

[ext_resource type="Script" path="res://addons/gd-mobile-physiology/example/Main.gd" id="1_65tux"]
[ext_resource type="PackedScene" uid="uid://bsjbwo2ih2fke" path="res://addons/gd-mobile-physiology/debug/chart/chart.tscn" id="2_qtway"]
[ext_resource type="Script" path="res://addons/gd-mobile-physiology/sampling/Sampler.gd" id="2_vkx86"]

[sub_resource type="FontFile" id="FontFile_sehcc"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_0ufry"]
default_font = SubResource("FontFile_sehcc")
default_font_size = 32

[node name="Main" type="Node"]
script = ExtResource("1_65tux")

[node name="Sampler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_vkx86")

[node name="UI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0ufry")
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="ChartContainer" type="VBoxContainer" parent="UI/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="UI/HBoxContainer/GridContainer/ChartContainer"]
layout_mode = 2
text = "Raw Data (x, y, z accelerometer + gyro readings)"

[node name="RawDataX" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.74902, 0.188235, 0.356863, 1)

[node name="RawDataY" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.25098, 0.670588, 0.215686, 1)

[node name="RawDataZ" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.156863, 0.368627, 0.788235, 1)

[node name="RawDataX2" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.74902, 0.188235, 0.356863, 1)

[node name="RawDataY2" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.25098, 0.670588, 0.215686, 1)

[node name="RawDataZ2" parent="UI/HBoxContainer/GridContainer/ChartContainer" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.156863, 0.368627, 0.788235, 1)

[node name="ChartContainer4" type="VBoxContainer" parent="UI/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="UI/HBoxContainer/GridContainer/ChartContainer4"]
layout_mode = 2
text = "Detrended, Z-Scored, and Filtered Data"

[node name="FixedDataX" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.74902, 0.188235, 0.356863, 1)

[node name="FixedDataY" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.25098, 0.670588, 0.215686, 1)

[node name="FixedDataZ" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.156863, 0.368627, 0.788235, 1)

[node name="FixedDataX2" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.74902, 0.188235, 0.356863, 1)

[node name="FixedDataY2" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.25098, 0.670588, 0.215686, 1)

[node name="FixedDataZ2" parent="UI/HBoxContainer/GridContainer/ChartContainer4" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.156863, 0.368627, 0.788235, 1)

[node name="ChartContainer5" type="VBoxContainer" parent="UI/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ICATitle" type="Label" parent="UI/HBoxContainer/GridContainer/ChartContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "ICA Output"

[node name="ICA1" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.267137, 0.617942, 0.561183, 1)

[node name="ICA2" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.266667, 0.619608, 0.560784, 1)

[node name="ICA3" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.266667, 0.619608, 0.560784, 1)

[node name="ICA4" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.267137, 0.617942, 0.561183, 1)

[node name="ICA5" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.266667, 0.619608, 0.560784, 1)

[node name="ICA6" parent="UI/HBoxContainer/GridContainer/ChartContainer5" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.266667, 0.619608, 0.560784, 1)

[node name="ChartContainer3" type="VBoxContainer" parent="UI/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RateLabel" type="Label" parent="UI/HBoxContainer/GridContainer/ChartContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Respiration Rate:"

[node name="FFT" parent="UI/HBoxContainer/GridContainer/ChartContainer3" instance=ExtResource("2_qtway")]
unique_name_in_owner = true
layout_mode = 2
line_color = Color(0.266667, 0.619608, 0.560784, 1)
